--- a/qva/src/App.css
+++ b/qva/src/App.css
@@ -4,3 +4,11 @@
   box-sizing: border-box;
 }
 
+#root {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+   overflow: hidden;
+}
