--- a/qva/src/index.css
+++ b/qva/src/index.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.cdnfonts.com/css/smooch-sans');
+@import url("//cdn.web-fonts.ge/fonts/bpg-algeti-compact/css/bpg-algeti-compact.min.css");
 
 @tailwind base;
 @tailwind components;
@@ -19,8 +20,15 @@
   height: 100%;
    overflow: hidden;
    font-family: 'Smooch Sans', sans-serif;
+  
+
 }
 
 body {
   background-color: #1e1c1b;
+  user-select: none;
+}
+
+.lang {
+  pointer-events: all;
 }
